# project_syx

./: .dockerignore  .env.build  .env.example  .env.old  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  Test_Setup.md  dependencies.md  docker-compose.yml  factory.md  idea.txt  morpheus_architecture  output.txt  prompts.json  pyproject.toml  pyrightconfig.json  questions.txt  refactor.md  requirements.txt  research.txt
.github/: pull_request_template.md
backend/: alembic.ini  requirements.txt
docs/: COVERAGE.md  DELTAS.md  REQUIREMENTS.md  TESTING_PLAN.md  agent_interface.md  ai_assisted_engineering.md  architecture.md  architecture_diagram.py  config_settings_matrix.md  dependencies.md  dream_cycle.md  memory_lifecycle.md  sleep_cycle.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
langfuse-server/: README.md  docker-compose.yml
tests/: __init__.py  conftest.py  prompts.json  test_agent_memory_expansion.py  test_agent_memory_search.py  test_agent_parser.py  test_agent_retrieval.py  test_agent_tokens.py  test_api_chat.py  test_api_files.py  test_api_projects.py  test_chat_pipeline.py  test_chunk_utils.py  test_config.py  test_daily_store_helpers.py  test_daily_store_pipeline.py  test_dream_auto_accept.py  test_dream_cycle.py  test_dream_idea_agent.py  test_dream_rag_expansion.py  test_dream_summary.py  test_dream_writer.py  test_embedding_batching.py  test_import_chat_html_to_markdown_memory.py  test_legacy_boundary_tagger.py  test_llm.py  test_llm_factory.py  test_main.py  test_manager_rebuild_helpers.py  test_manager_rebuild_pipeline.py  test_markdown_artifact_cutover.py  (+23 more)
(+2919 files in other folders)
