[project]
name = "syx"
version = "0.1.0"
description = "Syx AGI Chatbot Framework"
readme = "README.md"
license = "MIT"
authors = [{ name = "Syx Project Contributors" }]
requires-python = ">=3.13,<3.14"

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
