[project]
name = "syx"
version = "0.1.0"
description = "Syx AGI Chatbot Framework"
readme = "README.md"
license = "MIT"
authors = [{ name = "Syx Project Contributors" }]
requires-python = ">=3.13,<3.14"

[tool.black]
target-version = ["py313"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
# F: pyflakes (unused imports/vars, undefined names), B: flake8-bugbear
# (likely-bug patterns). Import sorting is owned by isort; line length by
# black, so E501 stays off. pyupgrade (UP) is intentionally not enabled to
# avoid churny annotation rewrites.
select = ["F", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency/param helpers are designed to be used as argument
# defaults, so they are not mutable-default bugs.
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Query",
]

[tool.coverage.run]
# The tracking/instrumentation layer is I/O-heavy telemetry glue (run/stage
# recording, JSON artifact writes, token-tolerance checks). It is deliberately
# excluded from coverage measurement rather than padded with brittle, low-value
# unit tests. Keep this list narrow and justified.
omit = [
    "app/tracking/*",
    "*/tracking/*",
]
